--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Xoxo"
         tools:targetApi="31">
         <activity
+            android:name=".BioskopDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BioskopActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
