--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:theme="@style/Theme.Xoxo"
         tools:targetApi="31">
         <activity
-            android:name=".BioskopDetailActivity"
+            android:name=".bioskop.BioskopFormActivity"
             android:exported="false" />
         <activity
-            android:name=".BioskopActivity"
+            android:name=".bioskop.BioskopDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".bioskop.BioskopActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
@@ -41,10 +44,10 @@
             android:exported="false" />
         <activity
             android:name=".ProfileActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".DetailActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
