update menu pengaturan pada profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,13 @@
             android:name=".SettingActivity"
             android:exported="false"/>
 
+        <activity
+            android:name=".HubungiKamiActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".TentangKamiActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
